# imap-sieve-client

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml.example
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/imap-sieve/: Cargo.toml
crates/imap-sieve-core/: Cargo.toml
crates/imap-sieve-core/src/: action_executor.rs  imap_client.rs  lib.rs  processor.rs  script_loader.rs  session.rs  sieve_engine.rs  smtp_sender.rs  state.rs  types.rs
crates/imap-sieve-core/tests/: integration_dovecot.rs
crates/imap-sieve/src/: daemon.rs  main.rs
docs/: design.md
docs/superpowers/specs/: 2026-04-25-imap-sieve-client-design.md
examples/: 01-basic-fileinto.sieve  02-redirect-reject.sieve  03-imap4flags.sieve  04-combined.sieve
sieve-scripts/: example.sieve
tests/integration/: README.md
tests/integration/dovecot/: docker-compose.yml  dovecot.conf  users
